	parse_changelog() function.
	* scripts/dpkg-genchanges.pl, script/dpkg-gencontrol.pl: Adapted to use
	the modified parse_changelog().
	* scripts/dpkg-gensymbols.pl, scripts/dpkg-source.pl: Likewise.

	* scripts/dpkg-genchanges.pl: Change logic of -si option to
	include the original tarball only if the current upstream version differs
	from the upstream version of the previous changelog entry.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* m4/arch.m4 (_DPKG_ARCHITECTURE): Do not use backticks inside double
	quotes, to support ancient shells.
	* m4/libs.m4 (DPKG_LIB_SELINUX): Likewise.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Coalesce mandatory options
	into a single paragraph, and state that at least one is required.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_SIZEOF): Quote parameters.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* THANKS: Add all the people that have contributed until now.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* src/remove.c (ensure_pathname_nonexisting): Additionally check if
	errno is EEXIST after calling rmdir, per SUSv3 when the directory
	is not empty errno can be ENOTEMPTY or EEXIST.
	* src/help.c (removal_bulk_remove_files): Likewise.
	(removal_bulk_remove_leftover_dirs): Likewise.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Stop parsing '--test' as a valid
	option.
	($testmode): Remove variable.
	(usage): Remove '--test' option help.
	* man/update-alternatives.8: Remove '--test' documentation.

2008-01-18  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Add missing semicolon.

2008-01-17  Guillem Jover  <guillem@debian.org>

	* THANKS: Convert to UTF-8.

2008-01-17  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Move version printing to ...
	(do_version): ... here. New function.
	(main): Call do_version instead of printf.
