@@ -58,6 +58,9 @@ dpkg (1.14.16) UNRELEASED; urgency=low
     tarball only if the current upstream version differs from the upstream
     version of the previous changelog entry. Replaces the heuristic based
     on revision number (-0, -0.1 or -1). Closes: #28701
+  * Some code refactoring on dpkg-genchanges and bug fixes in the generation
+    of the Description: field. As a result, source only uploads will no more
+    have Description fields.
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
